php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #34331 Seg Fault when variables_order is empty
Submitted: 2005-09-01 18:57 UTC Modified: 2005-09-01 21:16 UTC
From: ludvig dot ericson at gmail dot com Assigned:
Status: Closed Package: Reproducible crash
PHP Version: 5.1.0RC1 OS: Gentoo Linux 2.6
Private report: No CVE-ID: None
 [2005-09-01 18:57 UTC] ludvig dot ericson at gmail dot com
Description:
------------
If the php.ini directive variables_order is set to "" PHP will crash when run i CLI mode (don't know about apache handler).
It appears that it doesn't affect it when using -d variables_order="" at the command line, though. I am also using the disable_functions directive to disallow session_* related functions

Reproduce code:
---------------
$ php -c php.ini -r "echo 'hello world';"

Expected result:
----------------
hello world$ 

Actual result:
--------------
Segmentation fault
$ 

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-09-01 21:16 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 22 13:00:02 2026 UTC