Fixed bug #34331 (php crashes when variables_order is empty).