main/php_variables.c
@@ -17,7 +17,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: php_variables.c,v 1.107 2005/08/12 13:27:38 dmitry Exp $ */
+/* $Id: php_variables.c,v 1.108 2005/09/01 19:14:54 iliaa Exp $ */
 
 #include <stdio.h>
 #include "php.h"
@@ -969,7 +969,7 @@ int php_hash_environment(TSRMLS_D)
 
 static zend_bool php_auto_globals_create_server(char *name, uint name_len TSRMLS_DC)
 {
-	if (strchr(PG(variables_order),'S') || strchr(PG(variables_order),'s')) {
+	if (PG(variables_order) && (strchr(PG(variables_order),'S') || strchr(PG(variables_order),'s'))) {
 		php_register_server_variables(TSRMLS_C);
 	} else {
 		zval *server_vars=NULL;
@@ -1004,7 +1004,7 @@ static zend_bool php_auto_globals_create_env(char *name, uint name_len TSRMLS_DC
 	}
 	PG(http_globals)[TRACK_VARS_ENV] = env_vars;
 	
-	if (strchr(PG(variables_order),'E') || strchr(PG(variables_order),'e')) {
+	if (PG(variables_order) && (strchr(PG(variables_order),'E') || strchr(PG(variables_order),'e'))) {
 		php_import_environment_variables(PG(http_globals)[TRACK_VARS_ENV] TSRMLS_CC);
 	}
 
